# reachy_mini_tray

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  daemon-smoke.yml  release.yml
scripts/: build-sidecar.ps1  build-sidecar.sh  preview_icons.py
scripts/test/: test-daemon-bootstrap.ps1  test-daemon-bootstrap.sh
src-tauri/: Cargo.toml  Info.plist  python-entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  daemon.rs  hf_auth.rs  lib.rs  logs.rs  main.rs  paths.rs  state.rs  tray_icon.rs  tray_menu.rs  usb.rs
ui/: index.html  logs.html
